fixed aactordentify mobile dark mode

--- a/app/components/ActordentifyCard.css
+++ b/app/components/ActordentifyCard.css
@@ -38,7 +38,7 @@
 }
 
 .dark .frosted-pane {
-    height: calc(100% - 2.5px);
+    height: calc(100% - 2px);
     left: 1px;
     top: 1px;
     border-radius: 29px 0 0 29px;
@@ -112,6 +112,8 @@
         height: auto;
         top: -8px;
         left: 0;
+
+        /* display: none; */
     }
 
     #actordentify-card-video-bkg {
@@ -127,8 +129,18 @@
         bottom: 0;
     
         /* backdrop-filter: none;
-        background: none; */
+        background: none */
     }
+
+    .dark .frosted-pane {
+        width: calc(100% - 2px);
+        height: 100px;
+        left: 1px;
+        top: auto;
+        bottom: 1px;
+        border-radius: 0 0 29px 29px;
+    }
+    
 
     .frosted-pane h3 {
         padding-top: 18px;
